Auto import modules in JDK9+ in start script (#1737)